# DM-Arm-Hardware-Interface

./: .gitignore  README.md  Tutorial.md
.VSCodeCounter/2026-03-09_13-09-31/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
cmake/: dm_arm_core_targets.cmake  dm_control_core.cmake
cmake/standalone/: CMakeLists.txt  COLCON_IGNORE
python_binding/: CMakeLists.txt
python_binding/src/: bindings.cpp
src/adapters/dm_damiao_adapter/: CMakeLists.txt  README.md  package.xml
src/adapters/dm_damiao_adapter/include/dm_damiao_adapter/: dm_motor_bus.hpp
src/adapters/dm_damiao_adapter/src/: dm_motor_bus.cpp
src/adapters/dm_hw/: README.md  package.xml
src/adapters/dm_ros_control/: CMakeLists.txt  dm_ros_control_plugins.xml  package.xml
src/adapters/dm_ros_control/config/: pd_config.yaml
src/adapters/dm_ros_control/include/dm_ros_control/: dm_hardware_interface.hpp
src/adapters/dm_ros_control/src/: dm_hardware_interface.cpp
src/adapters/dm_ros_control/urdf/: dm_arm_ros_control.urdf.xacro
src/app/ros_topic_plotter/: CMakeLists.txt  package.xml
src/app/ros_topic_plotter/scripts/: ros_topic_plotter.py
src/capabilities/dm_control_core/: CMakeLists.txt  README.md  package.xml
src/capabilities/dm_control_core/include/dm_control_core/: dynamics_observer.hpp  joint_impedance_controller.hpp  pinocchio_dynamics_model.hpp
src/capabilities/dm_control_core/src/: dynamics_observer.cpp  pinocchio_dynamics_model.cpp
src/capabilities/dm_control_core/test/: test_joint_impedance_controller.cpp
src/capabilities/impedance_controller/include/impedance_controller/: dynamics_observer.hpp  joint_control_types.hpp  joint_impedance_controller.hpp  pinocchio_dynamics_model.hpp
src/capabilities/impedance_controller/src/: dynamics_observer.cpp  joint_impedance_controller.cpp  pinocchio_dynamics_model.cpp
src/capabilities/impedance_controller/test/: test_joint_impedance_controller.cpp
src/core/impedance_controller/: CMakeLists.txt  README.md  package.xml
src/core/impedance_controller/include/impedance_controller/: dynamics_observer.hpp  joint_control_types.hpp  pinocchio_dynamics_model.hpp
src/core/impedance_controller/src/: joint_impedance_controller.cpp
src/dm_arm_description/: CMakeLists.txt  package.xml
src/dm_arm_description/urdf/: DM-Arm-Description.urdf
src/dm_controller/: CMakeLists.txt  package.xml
src/dm_controller/scripts/: test.py
src/infra/tl/: CMakeLists.txt  package.xml
src/infra/tl/src/: clangd_provider.cpp
src/infra/tsid/src/contacts/: contact-6d.cpp
src/platform/dm_arm_description/launch/: rviz.launch.py
src/platform/dm_arm_description/urdf/: DM-Arm-Description.urdf
src/platform/dm_control_core/: CMakeLists.txt  README.md  package.xml
src/platform/dm_control_core/include/dm_control_core/: dm_motor_bus.hpp  dm_types.hpp  dynamics_observer.hpp  joint_control_types.hpp  joint_impedance_controller.hpp  pinocchio_dynamics_model.hpp
src/platform/dm_control_core/src/: dm_motor_bus.cpp  dynamics_observer.cpp  joint_impedance_controller.cpp  pinocchio_dynamics_model.cpp
src/platform/dm_controller/src/: test1.cpp
src/platform/dm_hw/: CMakeLists.txt  README.md
src/platform/dm_hw/include/dm_hw/: SerialPort.h  damiao.h  damiao.hpp  serial_port.h  serial_port.hpp
src/platform/dm_hw/src/: clangd_provider.cpp  test_damiao.cpp
src/platform/dm_ros_control/: CMakeLists.txt  dm_ros_control_plugins.xml  package.xml
src/platform/dm_ros_control/config/: controllers.yaml
src/platform/dm_ros_control/include/dm_ros_control/: dm_hardware_interface.hpp  dm_motor_bus.hpp  dm_types.hpp  dynamics_observer.hpp  pinocchio_dynamics_model.hpp
src/platform/dm_ros_control/launch/: dm_ros_control.launch.py  dm_ros_control_rviz.launch.py
src/platform/dm_ros_control/src/: dm_hardware_interface.cpp  dm_motor_bus.cpp  dynamics_observer.cpp  pinocchio_dynamics_model.cpp
src/platform/dm_ros_control/urdf/: dm_arm_ros_control.urdf.xacro
