<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>dm_damiao_adapter</name>
    <version>0.0.1</version>
    <description>Damiao motor bus adapter for DM arm control core commands and states.</description>
    <maintainer email="kaerei@foxmail.com">Kaede Rei</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>dm_hw</depend>
    <depend>dm_control_core</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
