<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ros_topic_plotter</name>
    <version>0.0.1</version>
    <description>Generic ROS 2 topic plotting GUI.</description>
    <maintainer email="kaerei@foxmail.com">Kaede Rei</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>rosidl_runtime_py</exec_depend>
    <exec_depend>python_qt_binding</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
